test/pass/else.fml
int x = 0
if x: print(x)
else: print(x+1)


