test/fail/not_defined.fml
int x = 2
if b:
 print(x)

